frontend/test/should_pass/modtestbase.grg
using modbase;

rule bbase(c:Common)
{
	if( c.name == "foobar" );
	
	modify {
		delete(c);
	}
}
