frontend/test/should_fail/exec_018.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  modify{
    exec(c:B=c & (c:B)=r(c) & (c)=r(c));
    return (y);
  }
}
